--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<groupId>jin.study</groupId>
 	<artifactId>husky</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
